docs/0.8/_sources/api/gammapy.astro.population.FaucherKaspi2006.rst.txt
FaucherKaspi2006
================

.. currentmodule:: gammapy.astro.population

.. autoclass:: FaucherKaspi2006
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FaucherKaspi2006.amplitude
      ~FaucherKaspi2006.bounding_box
      ~FaucherKaspi2006.bounds
      ~FaucherKaspi2006.col_fit_deriv
      ~FaucherKaspi2006.eqcons
      ~FaucherKaspi2006.evolved
      ~FaucherKaspi2006.fit_deriv
      ~FaucherKaspi2006.fittable
      ~FaucherKaspi2006.fixed
      ~FaucherKaspi2006.has_user_bounding_box
      ~FaucherKaspi2006.has_user_inverse
      ~FaucherKaspi2006.ineqcons
      ~FaucherKaspi2006.input_units
      ~FaucherKaspi2006.input_units_allow_dimensionless
      ~FaucherKaspi2006.input_units_equivalencies
      ~FaucherKaspi2006.input_units_strict
      ~FaucherKaspi2006.inputs
      ~FaucherKaspi2006.inverse
      ~FaucherKaspi2006.linear
      ~FaucherKaspi2006.meta
      ~FaucherKaspi2006.model_constraints
      ~FaucherKaspi2006.model_set_axis
      ~FaucherKaspi2006.n_inputs
      ~FaucherKaspi2006.n_outputs
      ~FaucherKaspi2006.name
      ~FaucherKaspi2006.outputs
      ~FaucherKaspi2006.param_names
      ~FaucherKaspi2006.param_sets
      ~FaucherKaspi2006.parameter_constraints
      ~FaucherKaspi2006.parameters
      ~FaucherKaspi2006.r_0
      ~FaucherKaspi2006.return_units
      ~FaucherKaspi2006.separable
      ~FaucherKaspi2006.sigma
      ~FaucherKaspi2006.standard_broadcasting
      ~FaucherKaspi2006.tied

   .. rubric:: Methods Summary

   .. autosummary::

      ~FaucherKaspi2006.__call__
      ~FaucherKaspi2006.copy
      ~FaucherKaspi2006.deepcopy
      ~FaucherKaspi2006.evaluate
      ~FaucherKaspi2006.n_submodels
      ~FaucherKaspi2006.prepare_inputs
      ~FaucherKaspi2006.prepare_outputs
      ~FaucherKaspi2006.rename
      ~FaucherKaspi2006.render
      ~FaucherKaspi2006.sum_of_implicit_terms
      ~FaucherKaspi2006.with_units_from_data
      ~FaucherKaspi2006.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: r_0
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: sigma
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: tied

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: n_submodels
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
